--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>salopm ozodbek</h1>
     <h1>salom aslibek</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, autem, velit unde ab deserunt odio, incidunt reprehenderit rerum quia sint voluptates. Explicabo minus est ducimus odit quam. Quaerat, excepturi iste?</p>
 </body>
 </html>
