--- a/index.html
+++ b/index.html
@@ -78,5 +78,167 @@
         <div></div>
      </div>
     <!-- banner end -->
+<!--end-->
+    <div class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl bg-[F1F3E0] ">
+        <div class=" text-[#203686] lg:flex md:flex md:justify-between items-center">
+            <div>Наш ассортимент</div>
+            <div><h1 class="lg:text-4xl md:text-3xl text-2xl pt-4 lg:font-bold md:font-bold font-bold">Компания предлагает более 500 <br> наименований рыбной продукции <br> и разнообразных товаров питания</h1></div>
+        </div>
+        <div class="lg:flex md:flex  justify-center py-8 gap-4 grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 ">
+            <div>
+                <img src="./img/baliq.png" alt="">
+                <h1 class="py-2 text-lg">Свежемороженая рыба</h1>
+                <p>Собственного производства <br> и со всего мира</p>
+            </div>
+            <div class="hidden md:block lg:block">
+               <img src="./img/krivetka.svg" alt=""> 
+               <h1 class="py-2 text-lg">Охлажденная рыба</h1>
+               <p>Со всего мира</p>
+            </div>
+            <div class="hidden md:block lg:block">
+                <img src="./img/oyoqcha.svg" alt="">
+                <h1 class="py-2 text-lg">Замороженное мясо, птица</h1>
+                <p>Со всего мира</p>
+            </div>
+            <div class="md:hidden lg:block hidden"> 
+                <img src="./img/loc.svg" alt="">
+                <h1 class="py-2 text-lg">Готовая продукция «Экор»</h1>
+                <p>Собственного производства </p>
+            </div>
+        </div>
+        <div class="lg:flex  hidden md:block lg:block gap-4">
+            <div class="md:flex gap-4">
+            <div>
+                <img src="./img/8oyoq.svg" alt="">
+                <h1 class="text-lg">Креветки и морепродукты</h1>
+                <p>Со всего мира</p>
+            </div>
+             <div class="md:block lg:hidden hidden"> 
+                <img src="./img/loc.svg" alt="">
+                <h1 class="py-2 text-lg">Готовая продукция «Экор»</h1>
+                <p>Собственного производства </p>
+            </div>
+            </div>
+            <div class="flex justify-center py-8">
+            <div class="md:block lg:block">
+                <img class="" src="./img/1uzun.png" alt="">
+                <h1 class="text-lg ">Рыбное филе</h1>
+                <p>Собственного производства и со всего мира</p>
+            </div>
+            </div>
+        </div>
+        <div class="lg:flex lg:block md:hidden hidden gap-4">
+            <div>
+                <img src="./img/kassa.png" alt="">
+                <h1 class="text-lg">Фасованная рыба</h1>
+                <p>Собственного производства</p>
+            </div>
+            <div>
+                <img src="./img/karam.svg" alt="">
+                <h1 class="text-lg">Замороженные овощи и фрукты</h1>
+                <p>Со всего мира</p>
+            </div>
+        </div>
+        <div class="lg:flex md:flex hidden lg:block md:block gap-4">
+            <div class="lg:block md:hidden">
+                <img src="./img/sut.svg" alt="">
+                <h1>Масло и молочная продукция</h1>
+                <p>Со всего мира</p>
+            </div>
+            <div>
+                <img src="./img/makaron.svg" alt="">
+                <h1>Бакалея и специи</h1>
+                <p>Со всего мира</p>
+            </div>
+            <div>
+                <img src="./img/yog.svg" alt="">
+                <h1>Масла растительные</h1>
+                <p>Со всего мира</p>
+            </div>
+            <div>
+                <img src="./img/sovus.svg" alt="">
+                <h1>Майонезы и соусы</h1>
+                <p>Со всего мира</p>
+            </div>
+        </div>
+        <div class="lg:hidden md:block hidden md:flex gap-4 py-8">
+            <div>
+                <img src="./img/karam.svg" alt="">
+                <h1 class="text-lg">Замороженные овощи и фрукты</h1>
+                <p>Со всего мира</p>
+            </div>
+            <div>
+                <img src="./img/sut.svg" alt="">
+                <h1>Масло и молочная продукция</h1>
+                <p>Со всего мира</p>
+            </div>
+        </div>
+        <div class="lg:hidden md:block hidden">
+            <img src="./img/uzun.png" alt="">
+            <h1 class="text-lg">Фасованная рыба</h1>
+            <p>Собственного производства</p>
+        </div>
+    </div>
+    <!--end-->
+    <div class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl ">
+        <div class="lg:flex md:flex justify-between py-18">
+            <h1>Универсальные поставки</h1>
+            <h1 class="lg:font-black md:font-bold font-bold">Мы специализируемся <br> на поставках для различных <br> сфер бизнеса</h1>
+        </div>
+        <div class="lg:w-60% lg:h-10% bg-[#FFFFFF] rounded-xl lg:py-8 md:py-8 px-4 ">
+            <div class="lg:flex">
+             <div class="flex items-center justify-between lg:py-8 md:py-8 gap-8">
+                <div>
+                <img src="./img/kata.png" alt="">
+                </div>
+               
+                <div>
+                    <h1>01</h1>
+                    <h1 class=" lg:pt-28 md:pt-20 font-bold">Торговые сети  и магазины «У дома»</h1>
+                </div>
+             </div>
+             <div class="flex items-center justify-between gap-8 py-8">
+                 <div class="md:block lg:hidden block">
+                    <h1>02</h1>
+                    <h1 class="lg:pt-28 md:pt-20  font-bold">Рестораны, кафе  и столовые</h1>
+                </div>
+                 <div>
+                <img src="./img/baliiq.png" alt="">
+                </div>
+                <div class="lg:block md:hidden hidden">
+                    <h1>02</h1>
+                    <h1 class="lg:pt-28 md:pt-20  font-bold">Рестораны, кафе  и столовые</h1>
+                </div>
+             </div>
+             </div>
+             <!--end-->
+             <div>
+                <div class="lg:flex">
+                    <div class="flex items-center justify-between gap-8 py-8">
+                        <div class="lg:block md:hidden hidden">
+                            <h1 class="py-4">03</h1>
+                        <h1     class="py-28">Оптовикам и прозвод <br>ителям</h1>
+                        </div>
+                        <div>
+                            <img src="./img/rasm.png" alt="">
+                        </div>
+                        <div class="md:block lg:hidden block">
+                            <h1 class="pt-4">03</h1>
+                        <h1     class="pt-28 lg:font-bold md:font-bold font-bold">Оптовикам и прозвод <br>ителям</h1>
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-between gap-8 py-8">
+                        <div>
+                            <h1 class="pt-4">04</h1>
+                            <h1 class="pt-28 font-bold">HoReCa</h1>
+                        </div>
+                        <div>
+                            <img src="./img/restaran.png" alt="">
+                        </div>
+                    </div>
+                </div>
+             </div>
+        </div>
+    </div>
 </body>
 </html>
