--- a/index.html
+++ b/index.html
@@ -6,6 +6,77 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- header start -->
+     <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-7xl flex justify-between items-center py-8">
+        <div class="flex gap-4">
+            <img src="./images/logo.svg" alt="">
+            <p class="text-[#70798E] text-sm font-medium hidden md:block">Поставщик продуктов <br>для HoReCa</p>
+        </div>
+        <div class="text-[#203686] lg:flex lg:gap-6 text-sm font-medium hidden lg:block">
+            <p>Доставка</p>
+            <p>Прайс</p>
+            <p>Производство</p>
+            <p>Оплата</p>
+            <p>Контакты</p>
+            <p>О компании </p>
+        </div>
+
+    <div class="lg:flex items-center justify-between hidden lg:block">
+        <div>
+            <i class="fa-brands fa-telegram fa-2xl" style="color: #203686;"></i>
+            <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #203686;"></i>    
+        </div>
+        <div>
+            <h1 class="tetx-lg font-bold text-[#203686]">8 (495) 637-82-28</h1>
+            <p class="text-xs font-semibold text-[#70798E]">заказать звонок</p>
+        </div>
+    </div>
+
+    <div class="lg:hidden ">
+        <i class="fa-solid fa-magnifying-glass fa-lg md:fa-xl" style="color: #203686;"></i>
+        <i class="fa-regular fa-circle-user fa-lg md:fa-xl" style="color: #203686;"></i>
+        <i class="fa-regular fa-heart fa-lg md:fa-xl" style="color: #203686;"></i>
+        <i class="fa-solid fa-cart-shopping fa-lg md:fa-xl" style="color: #203686;"></i>
+        <i class="fa-solid fa-list-ul fa-lg md:fa-xl" style="color: #203686;"></i>
+    </div>
+     </header>
+    <!-- header end -->
+
+    <!-- nav start -->
+    <div class="bg-[#203686]">
+     <nav class="text-white lg:flex items-center lg:max-w-7xl mx-auto justify-between py-4 hidden lg:block">
+        <div class="flex gap-6 items-center">
+            <i class="fa-solid fa-bars-staggered fa-2xl" style="color: #ffffff;"></i>
+            <h1>Каталог товаров</h1>
+        </div>
+        <div>
+            <input class="bg-[white] rounded-xl text-[#70798E] p-2 pr-26" type="text" 
+            placeholder="Поиск ">
+        </div>
+        <div class="flex gap-20">
+            <div class="flex items-center">
+                <img src="./images/Frame 1618868303.png" alt="">
+                <h1 class="font-semibold text-base">Избранное</h1>
+            </div>
+            <div class="flex items-center">
+                <img src="./images/frame_2.png" alt="">
+                <h1 class="font-semibold text-base">10 000,00 ₽</h1>
+            </div>
+            <div class="items-center">
+                <h1 class="font-semibold text-base">Вход</h1>
+            </div>
+        </div>
+     </nav>
+    </div>
+    <!-- nav end -->
+
+    <!-- banner start -->
+     <div>
+        <div>
+            <h1>> 1000 наименований продуктов питания оптом</h1>
+        </div>
+        <div></div>
+     </div>
+    <!-- banner end -->
 </body>
 </html>
