--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
+
 <body>
     <!-- header start -->
-     <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-7xl flex justify-between items-center py-8">
+    <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-7xl flex justify-between items-center py-8">
         <div class="flex gap-4">
             <img src="./images/logo.svg" alt="">
             <p class="text-[#70798E] text-sm font-medium hidden md:block">Поставщик продуктов <br>для HoReCa</p>
@@ -21,68 +27,70 @@
             <p>О компании </p>
         </div>
 
-    <div class="lg:flex items-center justify-between hidden lg:block">
-        <div>
-            <i class="fa-brands fa-telegram fa-2xl" style="color: #203686;"></i>
-            <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #203686;"></i>    
+        <div class="lg:flex items-center justify-between hidden lg:block">
+            <div>
+                <i class="fa-brands fa-telegram fa-2xl" style="color: #203686;"></i>
+                <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #203686;"></i>
+            </div>
+            <div>
+                <h1 class="tetx-lg font-bold text-[#203686]">8 (495) 637-82-28</h1>
+                <p class="text-xs font-semibold text-[#70798E]">заказать звонок</p>
+            </div>
         </div>
-        <div>
-            <h1 class="tetx-lg font-bold text-[#203686]">8 (495) 637-82-28</h1>
-            <p class="text-xs font-semibold text-[#70798E]">заказать звонок</p>
-        </div>
-    </div>
 
-    <div class="lg:hidden ">
-        <i class="fa-solid fa-magnifying-glass fa-lg md:fa-xl" style="color: #203686;"></i>
-        <i class="fa-regular fa-circle-user fa-lg md:fa-xl" style="color: #203686;"></i>
-        <i class="fa-regular fa-heart fa-lg md:fa-xl" style="color: #203686;"></i>
-        <i class="fa-solid fa-cart-shopping fa-lg md:fa-xl" style="color: #203686;"></i>
-        <i class="fa-solid fa-list-ul fa-lg md:fa-xl" style="color: #203686;"></i>
-    </div>
-     </header>
+        <div class="lg:hidden ">
+            <i class="fa-solid fa-magnifying-glass fa-lg md:fa-xl" style="color: #203686;"></i>
+            <i class="fa-regular fa-circle-user fa-lg md:fa-xl" style="color: #203686;"></i>
+            <i class="fa-regular fa-heart fa-lg md:fa-xl" style="color: #203686;"></i>
+            <i class="fa-solid fa-cart-shopping fa-lg md:fa-xl" style="color: #203686;"></i>
+            <i class="fa-solid fa-list-ul fa-lg md:fa-xl" style="color: #203686;"></i>
+        </div>
+    </header>
     <!-- header end -->
 
     <!-- nav start -->
     <div class="bg-[#203686]">
-     <nav class="text-white lg:flex items-center lg:max-w-7xl mx-auto justify-between py-4 hidden lg:block">
-        <div class="flex gap-6 items-center">
-            <i class="fa-solid fa-bars-staggered fa-2xl" style="color: #ffffff;"></i>
-            <h1>Каталог товаров</h1>
-        </div>
-        <div>
-            <input class="bg-[white] rounded-xl text-[#70798E] p-2 pr-26" type="text" 
-            placeholder="Поиск ">
-        </div>
-        <div class="flex gap-20">
-            <div class="flex items-center">
-                <img src="./images/Frame 1618868303.png" alt="">
-                <h1 class="font-semibold text-base">Избранное</h1>
+        <nav class="text-white lg:flex items-center lg:max-w-7xl mx-auto justify-between py-4 hidden lg:block">
+            <div class="flex gap-6 items-center">
+                <i class="fa-solid fa-bars-staggered fa-2xl" style="color: #ffffff;"></i>
+                <h1>Каталог товаров</h1>
             </div>
-            <div class="flex items-center">
-                <img src="./images/frame_2.png" alt="">
-                <h1 class="font-semibold text-base">10 000,00 ₽</h1>
+            <div>
+                <input class="bg-[white] rounded-xl text-[#70798E] p-2 pr-26" type="text" placeholder="Поиск ">
             </div>
-            <div class="items-center">
-                <h1 class="font-semibold text-base">Вход</h1>
+            <div class="flex gap-20">
+                <div class="flex items-center">
+                    <img src="./images/Frame 1618868303.png" alt="">
+                    <h1 class="font-semibold text-base">Избранное</h1>
+                </div>
+                <div class="flex items-center">
+                    <img src="./images/frame_2.png" alt="">
+                    <h1 class="font-semibold text-base">10 000,00 ₽</h1>
+                </div>
+                <div class="items-center">
+                    <h1 class="font-semibold text-base">Вход</h1>
+                </div>
             </div>
-        </div>
-     </nav>
+        </nav>
     </div>
     <!-- nav end -->
 
     <!-- banner start -->
-     <div>
+    <div>
         <div>
             <h1>> 1000 наименований продуктов питания оптом</h1>
         </div>
         <div></div>
-     </div>
+    </div>
     <!-- banner end -->
-<!--end-->
+    <!--end-->
     <div class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl bg-[F1F3E0] ">
         <div class=" text-[#203686] lg:flex md:flex md:justify-between items-center">
             <div>Наш ассортимент</div>
-            <div><h1 class="lg:text-4xl md:text-3xl text-2xl pt-4 lg:font-bold md:font-bold font-bold">Компания предлагает более 500 <br> наименований рыбной продукции <br> и разнообразных товаров питания</h1></div>
+            <div>
+                <h1 class="lg:text-4xl md:text-3xl text-2xl pt-4 lg:font-bold md:font-bold font-bold">Компания
+                    предлагает более 500 <br> наименований рыбной продукции <br> и разнообразных товаров питания</h1>
+            </div>
         </div>
         <div class="lg:flex md:flex  justify-center py-8 gap-4 grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 ">
             <div>
@@ -91,16 +99,16 @@
                 <p>Собственного производства <br> и со всего мира</p>
             </div>
             <div class="hidden md:block lg:block">
-               <img src="./img/krivetka.svg" alt=""> 
-               <h1 class="py-2 text-lg">Охлажденная рыба</h1>
-               <p>Со всего мира</p>
+                <img src="./img/krivetka.svg" alt="">
+                <h1 class="py-2 text-lg">Охлажденная рыба</h1>
+                <p>Со всего мира</p>
             </div>
             <div class="hidden md:block lg:block">
                 <img src="./img/oyoqcha.svg" alt="">
                 <h1 class="py-2 text-lg">Замороженное мясо, птица</h1>
                 <p>Со всего мира</p>
             </div>
-            <div class="md:hidden lg:block hidden"> 
+            <div class="md:hidden lg:block hidden">
                 <img src="./img/loc.svg" alt="">
                 <h1 class="py-2 text-lg">Готовая продукция «Экор»</h1>
                 <p>Собственного производства </p>
@@ -108,23 +116,23 @@
         </div>
         <div class="lg:flex  hidden md:block lg:block gap-4">
             <div class="md:flex gap-4">
-            <div>
-                <img src="./img/8oyoq.svg" alt="">
-                <h1 class="text-lg">Креветки и морепродукты</h1>
-                <p>Со всего мира</p>
-            </div>
-             <div class="md:block lg:hidden hidden"> 
-                <img src="./img/loc.svg" alt="">
-                <h1 class="py-2 text-lg">Готовая продукция «Экор»</h1>
-                <p>Собственного производства </p>
-            </div>
+                <div>
+                    <img src="./img/8oyoq.svg" alt="">
+                    <h1 class="text-lg">Креветки и морепродукты</h1>
+                    <p>Со всего мира</p>
+                </div>
+                <div class="md:block lg:hidden hidden">
+                    <img src="./img/loc.svg" alt="">
+                    <h1 class="py-2 text-lg">Готовая продукция «Экор»</h1>
+                    <p>Собственного производства </p>
+                </div>
             </div>
             <div class="flex justify-center py-8">
-            <div class="md:block lg:block">
-                <img class="" src="./img/1uzun.png" alt="">
-                <h1 class="text-lg ">Рыбное филе</h1>
-                <p>Собственного производства и со всего мира</p>
-            </div>
+                <div class="md:block lg:block">
+                    <img class="" src="./img/1uzun.png" alt="">
+                    <h1 class="text-lg ">Рыбное филе</h1>
+                    <p>Собственного производства и со всего мира</p>
+                </div>
             </div>
         </div>
         <div class="lg:flex lg:block md:hidden hidden gap-4">
@@ -183,48 +191,49 @@
     <div class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl ">
         <div class="lg:flex md:flex justify-between py-18">
             <h1>Универсальные поставки</h1>
-            <h1 class="lg:font-black md:font-bold font-bold">Мы специализируемся <br> на поставках для различных <br> сфер бизнеса</h1>
+            <h1 class="lg:font-black md:font-bold font-bold">Мы специализируемся <br> на поставках для различных <br>
+                сфер бизнеса</h1>
         </div>
         <div class="lg:w-60% lg:h-10% bg-[#FFFFFF] rounded-xl lg:py-8 md:py-8 px-4 ">
             <div class="lg:flex">
-             <div class="flex items-center justify-between lg:py-8 md:py-8 gap-8">
-                <div>
-                <img src="./img/kata.png" alt="">
+                <div class="flex items-center justify-between lg:py-8 md:py-8 gap-8">
+                    <div>
+                        <img src="./img/kata.png" alt="">
+                    </div>
+
+                    <div>
+                        <h1>01</h1>
+                        <h1 class=" lg:pt-28 md:pt-20 font-bold">Торговые сети и магазины «У дома»</h1>
+                    </div>
                 </div>
-               
-                <div>
-                    <h1>01</h1>
-                    <h1 class=" lg:pt-28 md:pt-20 font-bold">Торговые сети  и магазины «У дома»</h1>
+                <div class="flex items-center justify-between gap-8 py-8">
+                    <div class="md:block lg:hidden block">
+                        <h1>02</h1>
+                        <h1 class="lg:pt-28 md:pt-20  font-bold">Рестораны, кафе и столовые</h1>
+                    </div>
+                    <div>
+                        <img src="./img/baliiq.png" alt="">
+                    </div>
+                    <div class="lg:block md:hidden hidden">
+                        <h1>02</h1>
+                        <h1 class="lg:pt-28 md:pt-20  font-bold">Рестораны, кафе и столовые</h1>
+                    </div>
                 </div>
-             </div>
-             <div class="flex items-center justify-between gap-8 py-8">
-                 <div class="md:block lg:hidden block">
-                    <h1>02</h1>
-                    <h1 class="lg:pt-28 md:pt-20  font-bold">Рестораны, кафе  и столовые</h1>
-                </div>
-                 <div>
-                <img src="./img/baliiq.png" alt="">
-                </div>
-                <div class="lg:block md:hidden hidden">
-                    <h1>02</h1>
-                    <h1 class="lg:pt-28 md:pt-20  font-bold">Рестораны, кафе  и столовые</h1>
-                </div>
-             </div>
-             </div>
-             <!--end-->
-             <div>
+            </div>
+            <!--end-->
+            <div>
                 <div class="lg:flex">
                     <div class="flex items-center justify-between gap-8 py-8">
                         <div class="lg:block md:hidden hidden">
                             <h1 class="py-4">03</h1>
-                        <h1     class="py-28">Оптовикам и прозвод <br>ителям</h1>
+                            <h1 class="py-28">Оптовикам и прозвод <br>ителям</h1>
                         </div>
                         <div>
                             <img src="./img/rasm.png" alt="">
                         </div>
                         <div class="md:block lg:hidden block">
                             <h1 class="pt-4">03</h1>
-                        <h1     class="pt-28 lg:font-bold md:font-bold font-bold">Оптовикам и прозвод <br>ителям</h1>
+                            <h1 class="pt-28 lg:font-bold md:font-bold font-bold">Оптовикам и прозвод <br>ителям</h1>
                         </div>
                     </div>
                     <div class="flex items-center justify-between gap-8 py-8">
@@ -237,8 +246,9 @@
                         </div>
                     </div>
                 </div>
-             </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
