--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h1>salom</h1>
     <!-- header start -->
     <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-7xl flex justify-between items-center py-8">
         <div class="flex gap-4">
@@ -33,7 +34,7 @@
                 <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #203686;"></i>
             </div>
             <div>
-                <h1 class="tetx-lg font-bold text-[#203686]">8 (495) 637-82-28</h1>
+                <h1 class="tetx-lg font-bold text-[#203686]"> 8 (495) 637-82-28</h1>
                 <p class="text-xs font-semibold text-[#70798E]">заказать звонок</p>
             </div>
         </div>
