--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <h1>salom</h1>
     <!-- header start -->
     <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-7xl flex justify-between items-center py-8">
         <div class="flex gap-4">
@@ -34,7 +33,7 @@
                 <i class="fa-brands fa-square-whatsapp fa-2xl" style="color: #203686;"></i>
             </div>
             <div>
-                <h1 class="tetx-lg font-bold text-[#203686]"> 8 (495) 637-82-28</h1>
+                <h1 class="tetx-lg font-bold text-[#203686]">8 (495) 637-82-28</h1>
                 <p class="text-xs font-semibold text-[#70798E]">заказать звонок</p>
             </div>
         </div>
@@ -77,14 +76,19 @@
     <!-- nav end -->
 
     <!-- banner start -->
-    <div>
-        <div>
-            <h1>> 1000 наименований продуктов питания оптом</h1>
+     <div class="bg-[#6BA252] md:flex text-white max-w-2xs mx-auto md:max-w-2xl lg:max-w-7xl justify-between rounded-2xl my-10">
+        <div class="pl-10 pt-14">
+            <h1 class="font-semibold text-2xl md:text-3xl lg:text-5xl mb-4 ">> 1000 наименований <br>продуктов питания <br>оптом</h1>
+            <p class="font-medium text-base mb-5">для HoReCa, общепита, <br>производителей</p>
+            <button class="mb-10 font-semibold text-base bg-[#FFED32] rounded-2xl p-2 lg:py-3 lg:px-16 text-[#203686]">Получить прайс</button>
         </div>
-        <div></div>
-    </div>
+        <div class="items-end">
+            <img src="./images/banner.svg" class="">
+        </div>
+     </div>
     <!-- banner end -->
-<<<<<<< Updated upstream
+
+
     <!--end-->
     <div class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl bg-[F1F3E0] ">
         <div class=" text-[#203686] lg:flex md:flex md:justify-between items-center">
@@ -251,9 +255,6 @@
             </div>
         </div>
     </div>
-=======
-     
->>>>>>> Stashed changes
 </body>
 
 </html>
