--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-[#F1F3E0] text-[#203686]">
     <!-- header start -->
     <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl flex justify-between items-center py-8">
         <div class="flex gap-4">
