--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="bg-[#F1F3E0] text-[#203686]">
+    <h1>saloim</h1>
     <!-- header start -->
     <header class="max-w-2xs mx-auto md:max-w-2xl lg:max-w-4xl flex justify-between items-center py-8">
         <div class="flex gap-4">
